fixed width wall
Adjusted absolute positions for fixed width wall background

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -80,6 +80,7 @@ $cherry-red: #e60c22;
 $chestnut: #632d03;
 $beige: #f6f0e8;
 $sandstone: #cba37b;
+$wall-bg: #f4f0ef;
 
 $brownish-grey: #707070;
 $cherry-red: #e60c22;
